# advent2025

./: .gitignore  Cargo.toml
src/: lib.rs
