[package]
name = "aoc_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
flate2 = "1.0.35"
itertools = "0.13.0"
ndarray = "0.16.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
smallvec = "1.13.2"
smartstring = "1.0.1"
